k8s/homelab-dashboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dash-ingress
  namespace: homelab
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - dash.home
    secretName: home-tls
  rules:
  - host: dash.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homelab-dashboard
            port:
              number: 80
